slight improvement to footer and fix page vertical overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
     position: fixed;
     overflow-y: scroll;
     overflow-x: hidden;
-    height: 100%;
+    height: calc(100% - 65px);
     width: 100%;
     z-index: -1;
 }
@@ -18,5 +18,5 @@
 }
 
 .appDesktop {
-    margin-top: 70px;
+    margin-top: 65px;
 }
